--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
 
     - name: Deploy to S3
       run: |
-        aws s3 sync ./ s3://mybucket-20260101 --delete --exclude ".git/*" --exclude ".github/*"
+        aws s3 sync ./ s3://mysite-2525342006 --delete --exclude ".git/*" --exclude ".github/*"
